# CS410-Rust-Web-Dev

./: .gitignore  Cargo.toml  README.md
Notes/: week1-1.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
src/: main.rs
