[package]
name = "cs410-rust-web-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
dotenv = "0.15"
chrono = "0.4"

